--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,6 @@ body {
 .heading .heading-links {
   align-items: center;
   display: flex;
-  margin-left: 650px;
   gap: 60px;
   justify-content: center;
 }
@@ -185,6 +184,12 @@ body {
   background-color: #1e1e1e;
   border-radius: 10px;
   margin: 15px;
+  
+}
+.section-3-text{
+  width:68rem ;
+  justify-content: center;
+  display: flex;
 }
 .section-3 img {
   width: 200px;
