--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
 
 /* Body */
 body {
-  font-family: var(--Roboto) !important ;
+  font-family: var(--Poppins) !important ;
   background-color: #121212 !important;
   color: white !important;
   padding-bottom: 5rem;
