--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
 
 /* Body */
 body {
-  font-family: var(--Merriweather) !important ;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif !important ;
   background-color: #121212 !important;
   color: white !important;
   padding-bottom: 5rem;
