--- a/css/style.css
+++ b/css/style.css
@@ -1458,21 +1458,22 @@ body {
   font-size: 0.8rem;
   color: #bbb;
 }
-/* FLoating Modal */
+
+/* Floating Modal Styling */
 .floating-modal {
   position: fixed;
-  bottom: 80px;
-  right: 20px;
-  left: auto;
-  top: auto;
+  top: 80%;
+  left: 80%;
   display: flex;
   flex-direction: column;
   align-items: center;
   z-index: 1000;
   cursor: grab;
+  user-select: none;
+  transition: none;
 }
 
-.floating-modal:active {
+.floating-modal.dragging {
   cursor: grabbing;
 }
 
@@ -1497,6 +1498,9 @@ body {
   margin-top: 6px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
 }
+
+
+
 
 /* Section 3, 4, 5 Styling Shared */
 .section-3-rw,
