--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
 
 /* Body */
 body {
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif !important ;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif !important ;
   background-color: #121212 !important;
   color: white !important;
   padding-bottom: 5rem;
@@ -1499,9 +1499,6 @@ body {
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
 }
 
-
-
-
 /* Section 3, 4, 5 Styling Shared */
 .section-3-rw,
 .section-4-rw,
@@ -1857,6 +1854,28 @@ body::after {
   .security-btn button {
     font-size: 0.7rem;
     padding: 0.3rem 0.6rem;
+  }
+  .floating-modal{
+      left: 70%;
+
+  }
+  .floating-text {
+    background-color: #00c48c;
+    color: white;
+    font-size: 7px;
+    font-weight: 600;
+    border-radius: 20px;
+    padding: 4px 10px;
+    margin-top: 4px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+  }
+  .floating-icon {
+    width: 40px;
+    height: 40px;
+  }
+  .floating-icon img {
+    width: 20px;
+    height: 20px;
   }
   .balance-section {
     padding: 0.5rem 1rem;
